--- a/src/components/room-card.less
+++ b/src/components/room-card.less
@@ -54,7 +54,7 @@
   display: flex;
   gap: 10px;
   font-size: @edu-font-size-sm;
-  padding: 0 0px 5px 10px;
+  padding-bottom: 5px;
   color: lighten(@edu-text-color, 10%);
 
   &:last-of-type {
