--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -49,6 +49,7 @@
 @edu-disabled-background-color: transparent;
 @edu-background-color-base: #F0F0F0;
 @edu-background-color-light: #FAFAFA;
+@edu-background-color-footer: #F2F5F8;
 @edu-border-color-dark: #BCBCBC;
 @edu-border-color-base: #D9D9D9;
 @edu-border-color-light: #E8E8E8;
