EDU-1146 Introduce sponsors homepage footer

--- a/test-app/src/main.less
+++ b/test-app/src/main.less
@@ -8,3 +8,4 @@
 @import url('./theme.less');
 
 @custom-home-page-illustration-background-color: #F2F5F8;
+@custom-sponsors-homepage-footer-background-color: #ECF0F4;
