--- a/test-app/src/bundles/home-page-template.less
+++ b/test-app/src/bundles/home-page-template.less
@@ -53,3 +53,33 @@
   display: flex;
   justify-content: center;
 }
+
+.HomePageTemplate-sponsorsFooter {
+  display: grid;
+  gap: 15px;
+  grid-auto-flow: row;
+  place-items: center;
+  padding: @edu-page-content-padding 0;
+  background-color: @custom-sponsors-homepage-footer-background-color;
+
+  @media @edu-media-phone {
+    padding: calc(@edu-page-content-padding / 2);
+  }
+}
+
+.HomePageTemplate-sponsors {
+  display: grid;
+  gap: 30px;
+  grid-auto-flow: column;
+  place-items: center;
+}
+
+.HomePageTemplate-sponsor {
+  max-width: 150px;
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
+}
