--- a/test-app/src/bundles/home-page-template.less
+++ b/test-app/src/bundles/home-page-template.less
@@ -75,11 +75,5 @@
 }
 
 .HomePageTemplate-sponsor {
-  max-width: 150px;
-
-  img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-  }
+  width: 150px;
 }
