EDU-1148 Redesign homepage

--- a/src/components/navigation-desktop.less
+++ b/src/components/navigation-desktop.less
@@ -34,7 +34,7 @@
   display: flex;
   padding-right: 5px;
   justify-content: center;
-  color: @edu-border-color-dark;
+  color: @edu-text-color;
   background-color: @edu-white;
   border-radius: @edu-border-radius-base;
   width: @navigation-desktop-search-bar-inactive-width;
