--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -2,4 +2,19 @@
   margin-bottom: 32px;
 }
 
+.IndexPage-popularSearches {
+  .m-fake-flex-gap(5px);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+  margin-top: 20px;
+  padding: 0 10px;
+}
 
+.IndexPage-popularSearchesLabel {
+  color: @edu-text-color-secondary;
+}
+
+.IndexPage-popularSearchesTag {
+  cursor: pointer;
+}
