--- a/test-app/src/bundles/home-page-template.less
+++ b/test-app/src/bundles/home-page-template.less
@@ -13,7 +13,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: @custom-home-page-illustration-background-color;
 
   @media @edu-media-phone {
     padding-bottom: 0;
@@ -25,7 +24,7 @@
   width: 100%;
   max-width: @edu-content-width-narrow;
   display: grid;
-  grid-template-rows: 1.5fr 2fr auto;
+  grid-template-rows: 1.5fr auto 2fr;
   grid-template-columns: 100%;
 }
 
@@ -43,7 +42,7 @@
   text-align: center;
 }
 
-.HomePageTemplate-illustration {
+.HomePageTemplate-pictogramSearch {
   width: 100%;
   display: flex;
   justify-content: center;
