EDU-1148 Homepage proportions adjustments

--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -13,6 +13,7 @@
 
 .IndexPage-popularSearchesLabel {
   color: @edu-text-color-secondary;
+  margin-right: 10px;
 }
 
 .IndexPage-popularSearchesTag {
