--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -2,7 +2,7 @@
   margin-bottom: 32px;
 }
 
-.IndexPage-popularSearches {
+.IndexPage-searches {
   .m-fake-flex-gap(5px);
   display: flex;
   flex-wrap: wrap;
@@ -11,11 +11,7 @@
   padding: 0 10px;
 }
 
-.IndexPage-popularSearchesLabel {
+.IndexPage-searchesLabel {
   color: @edu-text-color-secondary;
   margin-right: 10px;
-}
-
-.IndexPage-popularSearchesTag {
-  cursor: pointer;
 }
