NOTICKET: Fix homepage width when content is narrow

--- a/test-app/src/bundles/home-page-template.less
+++ b/test-app/src/bundles/home-page-template.less
@@ -22,6 +22,7 @@
 
 .HomePageTemplate-content {
   height: 100%;
+  width: 100%;
   display: grid;
   gap: @edu-content-padding;
   grid-template-rows: 1.5fr auto 2fr;
