EDU-1147 Support setting homepage documents

--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -124,6 +124,18 @@
   gap: 3px;
 }
 
+.u-button {
+  display: flex;
+  align-items: center;
+}
+
+
+.u-list {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 15px;
+}
+
 .u-action-button {
   line-height: 26px;
   height: 26px !important;
