EDU-1147 Bonus commit: change logo color

--- a/test-app/src/bundles/site-logo.less
+++ b/test-app/src/bundles/site-logo.less
@@ -3,7 +3,7 @@
 .SiteLogo {
   margin: 12px 0;
   text-align: center;
-  color: @edu-primary-color-dark;
+  color: @edu-primary-color-light;
   font-weight: 900;
   font-size: @site-logo-font-size;
   line-height: 1.25 * @site-logo-font-size;
