EDU-1160 Fix control panels positioning when open

--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -16,24 +16,14 @@
   left: 0;
   right: 0;
   height: @control-panel-height;
-  margin: -@edu-page-content-padding;
-  margin-right: 20px;
+  margin-bottom: -@edu-page-content-padding;
   display: flex;
   justify-content: flex-end;
   z-index: @edu-z-index-overlay-layer;
   pointer-events: none;
 
-  &.is-panel-open {
-    margin-right: -@edu-page-content-padding;
-  }
-
   @media @edu-media-phone {
-    margin: calc(-@edu-page-content-padding / 2);
-    margin-right: 20px;
-
-    &.is-panel-open {
-      margin-right: calc(-@edu-page-content-padding / 2);
-    }
+    margin-bottom: calc(-@edu-page-content-padding / 2);
   }
 }
 
