EDU-1147 Support setting homepage documents and tags

--- a/src/components/admin/admin-settings-tab.less
+++ b/src/components/admin/admin-settings-tab.less
@@ -12,6 +12,11 @@
   padding: 10px;
 }
 
+.AdminSettingsTab-collapseInfo {
+  margin-bottom: 30px;
+  font-style: italic;
+}
+
 .AdminSettingsTab-saveButton {
   margin-top: 30px;
 }
