EDU-1149 Create document-cards component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -90,6 +90,7 @@
 @import '../components/pages/connect-external-account.less';
 @import '../components/media-player/track-mixer-editor.less';
 @import '../components/admin/technical-maintenance-tab.less';
+@import '../components/homepage/homepage-document-cards.less';
 @import '../components/media-player/track-mixer-display.less';
 @import '../components/external-account-provider-dialog.less';
 @import '../components/media-player/media-volume-slider.less';
