--- a/test-app/src/bundles/home-page-template.less
+++ b/test-app/src/bundles/home-page-template.less
@@ -2,14 +2,15 @@
   display: flex;
   flex-direction: column;
   min-width: @edu-min-page-width;
-  height: 100vh;
   width: 100vw;
 }
 
-.HomePageTemplate-contentArea {
+.HomePageTemplate-aboveFold {
   .m-page-content;
+  height: 100vh;
+  min-height: 100vh;
   padding-bottom: 0;
-  padding-top: 2 * @edu-page-content-padding;
+  padding-top: @edu-page-content-padding;
   flex: 1 0 0%;
   display: flex;
   align-items: center;
@@ -20,12 +21,12 @@
   }
 }
 
-.HomePageTemplate-content {
+.HomePageTemplate-aboveFoldContent {
   height: 100%;
   width: 100%;
   display: grid;
   gap: @edu-content-padding;
-  grid-template-rows: 1.5fr auto 2fr;
+  grid-template-rows: 1fr auto 2fr;
   max-width: @edu-content-width-narrow;
 }
 
@@ -71,4 +72,22 @@
 
 .HomePageTemplate-sponsor {
   width: 150px;
+}
+
+.HomePageTemplate-underFold {
+  display: grid;
+  grid-auto-flow: row;
+  place-items: center;
+}
+
+.HomePageTemplate-underFoldDocumentsStripe {
+  width: 100%;
+  padding: 50px @edu-page-content-padding;
+  background-color: @edu-background-color-medium;
+}
+
+.HomePageTemplate-underFoldDocuments {
+  width: 100%;
+  margin: 0 auto;
+  max-width: @edu-content-width-wide;
 }
