EDU-1161 Make users selectable

--- a/src/components/admin/user-accounts-tab.less
+++ b/src/components/admin/user-accounts-tab.less
@@ -36,6 +36,20 @@
   max-width: 320px;
 }
 
+.UserAccountsTab-selectedItems {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+  padding-top: @edu-content-padding;
+  padding-bottom: 2 * @edu-content-padding;
+}
+
+.UserAccountsTab-deselectItemsLink {
+  padding-left: 10px;
+  font-size: @edu-font-size-sm;
+  user-select: none;
+}
+
 .UserAccountsTab-storagePlanSelect {
   width: 100%;
 }
