EDU-1149 Make header logo scalable

--- a/src/components/default-page-header.less
+++ b/src/components/default-page-header.less
@@ -2,6 +2,11 @@
   .m-page-content;
 }
 
+.DefaultPageHeader-logo {
+  width: 50px;
+  aspect-ratio: 1;
+}
+
 .DefaultPageHeader-content {
   display: grid;
   place-items: start;
