EDU-1149 Make media player play overlay more visible

--- a/src/components/media-player/html5-player.less
+++ b/src/components/media-player/html5-player.less
@@ -18,10 +18,7 @@
 }
 
 .Html5Player-playOverlay {
-  .m-mask;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  .m-video-play-overlay;
 }
 
 .Html5Player-playOverlayIcon {
