--- a/src/components/media-player/youtube-player.less
+++ b/src/components/media-player/youtube-player.less
@@ -20,6 +20,10 @@
   background-size: cover;
 }
 
+.YoutubePlayer-playOverlay {
+  .m-video-play-overlay;
+}
+
 .YoutubePlayer-playIcon {
   .m-video-play-icon;
 }
