--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -414,12 +414,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
-  font-size: 25px;
+  font-size: 60px;
   color: @edu-white;
   border-radius: 50%;
-  background: rgba(0, 0, 0, 0.4);
+  opacity: 0.9;
+}
+
+.m-video-play-overlay {
+  .m-mask;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .m-user-form-title {
