EDU-1149 Add homepage presentation

--- a/src/components/homepage/homepage-document-cards.less
+++ b/src/components/homepage/homepage-document-cards.less
@@ -9,9 +9,9 @@
 
 .HomepageDocumentCards-cards {
   display: flex;
-  .m-fake-flex-gap(15px);
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  .m-fake-flex-gap(30px);
 }
 
 
