--- a/test-app/src/main.less
+++ b/test-app/src/main.less
@@ -4,6 +4,8 @@
 @import url('./bundles/site-logo.less');
 @import url('./bundles/lato-font.less');
 @import url('./bundles/home-page-template.less');
+@import url('./bundles/home-page-sponsors.less');
+@import url('./bundles/home-page-presentation.less');
 @import url('./theme.less');
 
 @custom-sponsors-homepage-footer-background-color: #ECF0F4;
