--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -50,6 +50,7 @@
 @edu-background-color-base: #F0F0F0;
 @edu-background-color-medium: #F2F5F8;
 @edu-background-color-light: #FAFAFA;
+@edu-background-color-footer: #ECF0F4;
 @edu-border-color-dark: #BCBCBC;
 @edu-border-color-base: #D9D9D9;
 @edu-border-color-light: #E8E8E8;
