EDU-1149 Introduce presentation components and better separate educandu from OMA

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -453,3 +453,22 @@
   font-size: @edu-font-size-sm;
   padding-bottom: 5px;
 }
+
+.m-home-page-section {
+  display: grid;
+  grid-auto-flow: row;
+  gap: 50px;
+  place-items: center
+}
+
+.m-home-page-headline {
+  font-size: @edu-heading-1-size;
+  font-weight: 300;
+  text-align: center;
+}
+
+.m-home-page-description {
+  max-width: @edu-content-width-narrow;
+  line-height: 2 * @edu-font-size-base;
+  text-align: center;
+}
