--- a/test-app/src/bundles/home-page-sponsors.less
+++ b/test-app/src/bundles/home-page-sponsors.less
@@ -3,8 +3,8 @@
   gap: 15px;
   grid-auto-flow: row;
   place-items: center;
-  padding: @edu-page-content-padding 0;
-  background-color: @custom-sponsors-homepage-footer-background-color;
+  background-color: @edu-background-color-footer;
+  padding-top: @edu-page-content-padding;
 
   @media @edu-media-phone {
     padding: calc(@edu-page-content-padding / 2);
