--- a/src/components/home-page/home-page-document-cards.less
+++ b/src/components/home-page/home-page-document-cards.less
@@ -1,31 +1,29 @@
-.HomepageDocumentCards {}
-
-.HomepageDocumentCards-headline {
-  font-size: @edu-heading-1-size;
-  font-weight: 300;
-  text-align: center;
-  padding-bottom: 40px;
+.HomePageDocumentCards {
+  .m-home-page-section;
 }
 
-.HomepageDocumentCards-cards {
+.HomePageDocumentCards-headline {
+  .m-home-page-headline;
+}
+
+.HomePageDocumentCards-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   .m-fake-flex-gap(30px);
 }
 
-
-.HomepageDocumentCards-card {
+.HomePageDocumentCards-card {
   width: 300px;
 }
 
-.HomepageDocumentCards-cardTitle {
+.HomePageDocumentCards-cardTitle {
   font-size: @edu-font-size-base;
   font-weight: bold;
   .m-overflow-ellipsis;
 }
 
-.HomepageDocumentCards-cardContent {
+.HomePageDocumentCards-cardContent {
   height: 100px;
   display: flex;
   flex-direction: column;
@@ -33,20 +31,20 @@
   font-size: @edu-font-size-sm;
 }
 
-.HomepageDocumentCards-cardContentDescription {
+.HomePageDocumentCards-cardContentDescription {
   .m-line-clamp(3);
 }
 
-.HomepageDocumentCards-cardContentDate {
+.HomePageDocumentCards-cardContentDate {
   color: @edu-text-color-secondary;
 }
 
-.HomepageDocumentCards-cardFavoriteAction {
+.HomePageDocumentCards-cardFavoriteAction {
   display: flex;
   justify-content: center;
 }
 
-.HomepageDocumentCards-cardUserAction {
+.HomePageDocumentCards-cardUserAction {
   &:hover {
     cursor: default;
     color: @edu-text-color;
