EDU-1149 Reduce unnecessary site-logo component

--- a/src/components/default-site-logo.less
+++ b/src/components/default-site-logo.less
@@ -1,6 +1,10 @@
+@default-site-logo-font-size: 34px;
+
 .DefaultSiteLogo {
-  margin: 35px 0;
-  font-size: 40px;
+  margin: 12px 0;
   text-align: center;
+  font-weight: 900;
   color: @edu-primary-color-light;
+  font-size: @default-site-logo-font-size;
+  line-height: 1.25 * @default-site-logo-font-size;
 }
