EDU-1149 Support navigating to homepage documents

--- a/src/components/home-page/home-page-document-cards.less
+++ b/src/components/home-page/home-page-document-cards.less
@@ -10,11 +10,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  .m-fake-flex-gap(30px);
 }
 
 .HomePageDocumentCards-card {
   width: 300px;
+  margin: 15px;
 }
 
 .HomePageDocumentCards-cardTitle {
