EDU-1149 Rename home-page to homepage

--- a/src/components/homepage/homepage-document-cards.less
+++ b/src/components/homepage/homepage-document-cards.less
@@ -1,29 +1,29 @@
-.HomePageDocumentCards {
-  .m-home-page-section;
+.HomepageDocumentCards {
+  .m-homepage-section;
 }
 
-.HomePageDocumentCards-headline {
-  .m-home-page-headline;
+.HomepageDocumentCards-headline {
+  .m-homepage-headline;
 }
 
-.HomePageDocumentCards-cards {
+.HomepageDocumentCards-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.HomePageDocumentCards-card {
+.HomepageDocumentCards-card {
   width: 300px;
   margin: 15px;
 }
 
-.HomePageDocumentCards-cardTitle {
+.HomepageDocumentCards-cardTitle {
   font-size: @edu-font-size-base;
   font-weight: bold;
   .m-overflow-ellipsis;
 }
 
-.HomePageDocumentCards-cardContent {
+.HomepageDocumentCards-cardContent {
   height: 100px;
   display: flex;
   flex-direction: column;
@@ -31,20 +31,20 @@
   font-size: @edu-font-size-sm;
 }
 
-.HomePageDocumentCards-cardContentDescription {
+.HomepageDocumentCards-cardContentDescription {
   .m-line-clamp(3);
 }
 
-.HomePageDocumentCards-cardContentDate {
+.HomepageDocumentCards-cardContentDate {
   color: @edu-text-color-secondary;
 }
 
-.HomePageDocumentCards-cardFavoriteAction {
+.HomepageDocumentCards-cardFavoriteAction {
   display: flex;
   justify-content: center;
 }
 
-.HomePageDocumentCards-cardUserAction {
+.HomepageDocumentCards-cardUserAction {
   &:hover {
     cursor: default;
     color: @edu-text-color;
