--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -454,20 +454,20 @@
   padding-bottom: 5px;
 }
 
-.m-home-page-section {
+.m-homepage-section {
   display: grid;
   grid-auto-flow: row;
   gap: 50px;
   place-items: center
 }
 
-.m-home-page-headline {
+.m-homepage-headline {
   font-size: @edu-heading-1-size;
   font-weight: 300;
   text-align: center;
 }
 
-.m-home-page-description {
+.m-homepage-description {
   max-width: @edu-content-width-narrow;
   line-height: 2 * @edu-font-size-base;
   text-align: center;
