--- a/test-app/src/bundles/homepage-presentation.less
+++ b/test-app/src/bundles/homepage-presentation.less
@@ -1,24 +1,24 @@
-.HomePagePresentation {}
+.HomepagePresentation {}
 
-.HomePagePresentation-videoWrapper {
+.HomepagePresentation-videoWrapper {
   aspect-ratio: 16/9;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url('/images/home-page-video-icons.svg');
+  background-image: url('/images/homepage-video-icons.svg');
   background-repeat: no-repeat;
   background-size: contain;
 }
 
-.HomePagePresentation-video {
+.HomepagePresentation-video {
   max-width: 60%;
 }
 
-.HomePagePresentation-details {
-  .m-home-page-section;
+.HomepagePresentation-details {
+  .m-homepage-section;
 }
 
-.HomePagePresentation-logo {
+.HomepagePresentation-logo {
   display: flex;
   justify-content: center;
   width: 80px;
