--- a/test-app/src/bundles/homepage-sponsors.less
+++ b/test-app/src/bundles/homepage-sponsors.less
@@ -1,4 +1,4 @@
-.HomePageSponsors {
+.HomepageSponsors {
   display: grid;
   gap: 15px;
   grid-auto-flow: row;
@@ -11,13 +11,13 @@
   }
 }
 
-.HomePageSponsors-content {
+.HomepageSponsors-content {
   display: grid;
   gap: 30px;
   grid-auto-flow: column;
   place-items: center;
 }
 
-.HomePageSponsors-logo {
+.HomepageSponsors-logo {
   width: 150px;
 }
