--- a/test-app/src/bundles/homepage-template.less
+++ b/test-app/src/bundles/homepage-template.less
@@ -1,11 +1,11 @@
-.HomePageTemplate {
+.HomepageTemplate {
   display: flex;
   flex-direction: column;
   min-width: @edu-min-page-width;
   width: 100vw;
 }
 
-.HomePageTemplate-aboveFold {
+.HomepageTemplate-aboveFold {
   .m-page-content;
   height: 100vh;
   min-height: 100vh;
@@ -21,7 +21,7 @@
   }
 }
 
-.HomePageTemplate-aboveFoldContent {
+.HomepageTemplate-aboveFoldContent {
   height: 100%;
   width: 100%;
   display: grid;
@@ -30,7 +30,7 @@
   max-width: @edu-content-width-narrow;
 }
 
-.HomePageTemplate-logo {
+.HomepageTemplate-logo {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -38,34 +38,34 @@
   margin-bottom: 40px;
 }
 
-.HomePageTemplate-subtitle {
+.HomepageTemplate-subtitle {
   font-size: @edu-font-size-xl;
   font-weight: 300;
   text-align: center;
 }
 
-.HomePageTemplate-pictogramSearch {
+.HomepageTemplate-pictogramSearch {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
-.HomePageTemplate-underFold {
+.HomepageTemplate-underFold {
   display: grid;
   grid-auto-flow: row;
   place-items: center;
 }
 
-.HomePageTemplate-underFoldStripe {
+.HomepageTemplate-underFoldStripe {
   width: 100%;
   padding: 70px @edu-page-content-padding;
 
-  &.HomePageTemplate-underFoldStripe--colorful {
+  &.HomepageTemplate-underFoldStripe--colorful {
     background-color: @edu-background-color-medium;
   }
 }
 
-.HomePageTemplate-underFoldStripeContent {
+.HomepageTemplate-underFoldStripeContent {
   width: 100%;
   margin: 0 auto;
   max-width: @edu-content-width-wide;
