EDU-1149 Make homepage presentation section part of educandu

--- a/test-app/src/bundles/homepage-template.less
+++ b/test-app/src/bundles/homepage-template.less
@@ -38,6 +38,13 @@
   margin-bottom: 40px;
 }
 
+.HomepageTemplate-presentationLogo {
+  display: flex;
+  justify-content: center;
+  width: 80px;
+  aspect-ratio: 1;
+}
+
 .HomepageTemplate-subtitle {
   font-size: @edu-font-size-xl;
   font-weight: 300;
