--- a/src/components/homepage/homepage-project-presentation.less
+++ b/src/components/homepage/homepage-project-presentation.less
@@ -5,3 +5,28 @@
 .HomepageProjectPresentation-description {
   .m-homepage-description;
 }
+
+.HomepageProjectPresentation-videoWrapper {
+  aspect-ratio: 16/9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url('/images/homepage-video-icons.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.HomepageProjectPresentation-video {
+  max-width: 60%;
+}
+
+.HomepageProjectPresentation-details {
+  .m-homepage-section;
+}
+
+.HomepageProjectPresentation-logo {
+  display: flex;
+  justify-content: center;
+  width: 80px;
+  aspect-ratio: 1;
+}
