--- a/src/components/homepage/homepage-project-presentation.less
+++ b/src/components/homepage/homepage-project-presentation.less
@@ -18,6 +18,8 @@
 
 .HomepageProjectPresentation-video {
   max-width: 60%;
+  border-radius: 15px;
+  border: 12px solid @edu-primary-color-light;
 }
 
 .HomepageProjectPresentation-details {
