--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -102,6 +102,7 @@
 @import '../components/media-player/media-player-controls.less';
 @import '../components/pages/room-membership-confirmation.less';
 @import '../components/resource-selector/resource-selector.less';
+@import '../components/admin/homepage-presentation-settings.less';
 @import '../components/media-player/multitrack-media-player.less';
 @import '../components/redaction/redaction-document-tags-tab.less';
 @import '../components/resource-selector/shared/resource-url.less';
