--- a/src/components/homepage/homepage-project-presentation.less
+++ b/src/components/homepage/homepage-project-presentation.less
@@ -16,9 +16,9 @@
 }
 
 .HomepageProjectPresentation-video {
-  max-width: 60%;
+  width: 60%;
   border-radius: 15px;
-  border: 12px solid @edu-primary-color-light;
+  border: 14px solid @edu-primary-color-light;
 }
 
 .HomepageProjectPresentation-details {
