EDU-1149 Add fold effect images

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -465,6 +465,7 @@
   font-size: @edu-heading-1-size;
   font-weight: 300;
   text-align: center;
+  line-height: 1.5 * @edu-heading-1-size;
 }
 
 .m-homepage-description {
