EDU-1149 Adjust small styling aspects

--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -462,14 +462,14 @@
 }
 
 .m-homepage-headline {
-  font-size: @edu-heading-1-size;
   font-weight: 300;
   text-align: center;
-  line-height: 1.5 * @edu-heading-1-size;
+  font-size: @edu-heading-1-size;
+  line-height: 160%;
 }
 
 .m-homepage-description {
   max-width: @edu-content-width-narrow;
-  line-height: 2 * @edu-font-size-base;
+  line-height: 160%;
   text-align: center;
 }
