--- a/test-app/src/bundles/homepage-template.less
+++ b/test-app/src/bundles/homepage-template.less
@@ -27,14 +27,13 @@
 .HomepageTemplate-aboveFoldContent {
   .m-page-content;
   flex: 1 0 auto;
-  margin: 0 auto;
   width: 100%;
   display: grid;
   gap: @edu-content-padding;
   grid-template-rows: 1fr auto 2fr;
   align-content: center;
   max-width: @edu-content-width-narrow;
-  padding-top: @edu-page-content-padding;
+  margin: 15% auto 0 auto;
 }
 
 .HomepageTemplate-logo {
