--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -2,16 +2,31 @@
   margin-bottom: 32px;
 }
 
+.IndexPage-searchesWrapper {
+  margin-top: 20px;
+  display: flex;
+  align-items: baseline;
+  justify-content: flex-start;
+
+  @media @edu-media-phone {
+    flex-wrap: wrap;
+  }
+}
+
 .IndexPage-searches {
-  .m-fake-flex-gap(5px);
   display: flex;
   flex-wrap: wrap;
-  align-items: baseline;
-  margin-top: 20px;
   padding: 0 10px;
+  align-items: baseline;
 }
 
 .IndexPage-searchesLabel {
-  color: @edu-text-color-secondary;
+  flex: 1 0 auto;
   margin-right: 10px;
+  margin-bottom: 10px;
+  color: @edu-text-color-secondary;
+}
+
+.IndexPage-searchesTag {
+  margin: 5px;
 }
