--- a/test-app/src/bundles/homepage-template.less
+++ b/test-app/src/bundles/homepage-template.less
@@ -29,10 +29,10 @@
   width: 100%;
   display: grid;
   gap: @edu-content-padding;
-  grid-template-rows: 1fr auto 2fr;
+  grid-template-rows: auto 1fr;
   align-content: center;
   max-width: @edu-content-width-narrow;
-  margin: 15% auto 0 auto;
+  margin: 10% auto 0 auto;
 }
 
 .HomepageTemplate-logo {
