--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -62,6 +62,7 @@
 @import '../components/pages/user-profile.less';
 @import '../components/edit-control-panel.less';
 @import '../components/document-info-cell.less';
+@import '../components/admin/roles-select.less';
 @import '../components/dashboard/rooms-tab.less';
 @import '../components/default-page-footer.less';
 @import '../components/default-page-header.less';
@@ -80,6 +81,7 @@
 @import '../components/dashboard/favorites-tab.less';
 @import '../components/dashboard/activities-tab.less';
 @import '../components/admin/admin-settings-tab.less';
+@import '../components/admin/storage-plan-select.less';
 @import '../components/never-scrolling-text-area.less';
 @import '../components/media-player/html5-player.less';
 @import '../components/media-player/media-player.less';
