--- a/src/styles/tabs.less
+++ b/src/styles/tabs.less
@@ -4,6 +4,10 @@
   &.Tabs--smallPadding {
     padding-top: 20px !important;
   }
+
+  &.Tabs--noPadding {
+    padding-top: 0 !important;
+  }
 }
 
 .Tabs-tabPane {
