--- a/test-app/src/main.less
+++ b/test-app/src/main.less
@@ -1,5 +1,8 @@
 @import url('../../src/styles/main.less');
 
+// Additional plugins
+@import url('./test-plugin/server-time.less');
+
 // Styles for OMA:
 @import url('./bundles/lato-font.less');
 @import url('./bundles/homepage-template.less');
