--- a/test-app/src/main.less
+++ b/test-app/src/main.less
@@ -1,10 +1,10 @@
 @import url('../../src/styles/main.less');
 
 // Additional plugins
-@import url('./test-plugin/server-time.less');
+@import url('./custom-plugin/server-time.less');
 
 // Styles for OMA:
-@import url('./bundles/lato-font.less');
-@import url('./bundles/homepage-template.less');
-@import url('./bundles/homepage-sponsors.less');
 @import url('./theme.less');
+@import url('./lato-font.less');
+@import url('./custom-components/homepage-template.less');
+@import url('./custom-components/homepage-sponsors.less');
