EDU-1163 Load all plugin components only on actual demand

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -47,6 +47,7 @@
 @import '../components/profile-header.less';
 @import '../components/documents-table.less';
 @import '../components/deleted-section.less';
+@import '../components/loading-section.less';
 @import '../components/pages/dashboard.less';
 @import '../components/section-display.less';
 @import '../components/iteration-panel.less';
