EDU-1178 Create notifications tab on user dashboard

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -87,6 +87,7 @@
 @import '../components/media-player/html5-player.less';
 @import '../components/media-player/media-player.less';
 @import '../components/localization/language-icon.less';
+@import '../components/dashboard/notifications-tab.less';
 @import '../components/pages/browser-not-supported.less';
 @import '../components/media-player/youtube-player.less';
 @import '../components/irreversible-actions-section.less';
