EDU-1183 Adjust activities style to streamline and emphasize important text

--- a/src/components/dashboard/activities-tab.less
+++ b/src/components/dashboard/activities-tab.less
@@ -1,5 +1,5 @@
-@activities-item-label-width: 160px;
-@activities-item-content-inset-inline-start: @activities-item-label-width + 20px;
+@activities-item-label-width: 140px;
+@activities-item-content-inset-inline-start: @activities-item-label-width + 30px;
 
 .ActivitiesTab-info {
   .m-info-card;
@@ -43,8 +43,14 @@
   .m-overflow-ellipsis;
 }
 
+.ActivitiesTab-activityIcon {
+  font-size: @edu-font-size-xl;
+  color: @edu-text-color;
+}
+
 .ActivitiesTab-activityLabel {
-  font-style: italic;
+  font-size: @edu-font-size-sm;
+  color: @edu-text-color-secondary;
 }
 
 .ActivitiesTab-activityDescription {
