--- a/src/components/navigation-desktop.less
+++ b/src/components/navigation-desktop.less
@@ -51,6 +51,10 @@
   grid-auto-flow: column;
 }
 
+.NavigationDesktop-menuNotificationsIndicator {
+  padding-right: 10px;
+}
+
 .NavigationDesktop-menuButton {
   gap: 10px;
   display: grid;
@@ -63,6 +67,13 @@
   padding-right: 10px;
   font-size: @edu-font-size-sm;
   color: @edu-text-color-secondary;
+}
+
+.NavigationDesktop-menuLabel {
+  display: grid;
+  align-items: baseline;
+  grid-auto-flow: column;
+  gap: @edu-control-spacing-wide;
 }
 
 .NavigationDesktop-anonymousUser {
