EDU-1183 Prevent overflow of notification link on mobile

--- a/src/components/dashboard/notifications-tab.less
+++ b/src/components/dashboard/notifications-tab.less
@@ -52,13 +52,12 @@
 
 .NotificationsTab-notificationTitle {
   font-style: italic;
-  .m-overflow-ellipsis;
 
 }
 
 .NotificationsTab-notificationLink {
   .m-link;
-  .m-overflow-ellipsis;
+  .m-line-clamp(1);
 }
 
 .NotificationsTab-notificationContentTextSecondary {
